final-code/aws-eks-demo-cluster/Application deployment/deployment-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocr-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: ocr-dev
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      serviceAccountName: my-app-sa  # Ensure this service account has the necessary IAM role
      containers:
      - name: my-app-container
        image: nginx:latest
        volumeMounts:
        - name: env-volume
          mountPath: /app
      volumes:
      - name: env-volume
        emptyDir: {}
