final-code/aws-eks-demo-cluster/Application deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: ocr
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      serviceAccountName: my-app-sa  # Ensure this service account has the necessary IAM role
      containers:
      - name: my-app-container
        image: my-docker-repo/my-app:latest  # Replace ${app_image} with the actual image name
        volumeMounts:
        - name: env-volume
          mountPath: /app
      volumes:
      - name: env-volume
        emptyDir: {}
      strategy:
        type: RollingUpdate
        rollingUpdate:
          maxUnavailable: 1
          maxSurge: 1
